--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-node-api",
+  "name": "tsubasa-soccer-club",
   "version": "1.0.0",
   "description": "Zowe sample node API",
   "main": "index.js",
