--- a/sample-node-api.yml
+++ b/sample-node-api.yml
@@ -1,9 +1,9 @@
 #
 services:
-    - serviceId: sample-node-api
-      title: Sample-Node-API
+    - serviceId: tsubasa-soccer-club
+      title: tsubasa-soccer-club
       description: Sample Node API
-      catalogUiTileId: sample-node-api
+      catalogUiTileId: tsubasa-soccer-club
       instanceBaseUrls:
         - http://${ZOWE_EXPLORER_HOST}:18000/
       homePageRelativeUrl:  # Home page is at the same URL
@@ -11,13 +11,13 @@ services:
         - gatewayUrl: api/v1  # [api/ui/ws]/v{majorVersion}
           serviceRelativeUrl:
       apiInfo:
-        - apiId: com.ibm.sample-node-api
+        - apiId: com.ibm.tsubasa-soccer-club
           gatewayUrl: api/v1
           version: 1.0.0
           swaggerUrl: http://${ZOWE_EXPLORER_HOST}:18000/api-docs
           documentationUrl: http://${ZOWE_EXPLORER_HOST}:18000/api-docs-ui
 
 catalogUiTiles:
-    sample-node-api:
-      title: Sample-Node-API
+    tsubasa-soccer-club:
+      title: tsubasa-soccer-club
       description: Sample Node API
