--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "2.8.5",
     "express": "4.17.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.17.0",
     "swagger-ui-express": "4.2.0",
     "yargs": "17.2.1"
   },
