--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "",
   "license": "EPL-2.0",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "cors": "2.8.5",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
