--- a/src/config.json
+++ b/src/config.json
@@ -8,7 +8,13 @@
       "host": "localhost",
       "port": 3306,
       "user": "root",
-      "password": "admin",
+      "password": "root",
       "database": "aws-database"
+  },
+  "rabbit": {
+    "uri": "amqp://localhost"
+  },
+  "redis": {
+    "uri": "localhost"
   }
 }
