--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:https": "nodemon src/index.js --key sslcert/server.key --cert sslcert/server.cert",
     "start": "node src/index.js",
     "build": "npm run clean && cp -r src dist/src && cp -r bin dist/bin && cp *.yml dist && cp *.yaml dist && cp *.json dist && cp README.md dist && cp LICENSE dist",
-    "clean": "rimraf dist && mkdirp dist"
+    "clean": "rimraf dist && mkdirp dist",
+    "swagger-autogen": "node src/swagger.js"
   },
   "author": "",
   "license": "EPL-2.0",
@@ -26,6 +27,7 @@
     "mkdirp": "1.0.4",
     "node-fetch": "2.6.6",
     "nodemon": "2.0.14",
-    "rimraf": "3.0.2"
+    "rimraf": "3.0.2",
+    "swagger-autogen": "^2.20.8"
   }
 }
