--- a/src/config.json
+++ b/src/config.json
@@ -8,7 +8,7 @@
       "host": "localhost",
       "port": 3306,
       "user": "root",
-      "password": "naka",
+      "password": "admin",
       "database": "aws-database"
   },
   "rabbit": {
